[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = { version = "0.4.1"}
futures-util = "0.3.28"

serde = "1.0.160"

# crate that enables json parsing
serde_json = "1.0.95"

# crate that gives usage for json webtokens
jsonwebtoken = "8.3.0"

# crate that allows sending simple HTTP requests
reqwest = { version = "0.11.16", features = ["blocking", "json"] }

# enables reading environment variables from a .env file
dotenvy = "0.15.7"

tokio = { version = "1.12.0", features = ["full"] }